@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.6.2
-Date: 2015-02-26
+Version: 0.6.21
+Date: 2015-03-19
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
