@@ -6,6 +6,7 @@
 \description{Pay a bonus to one or more workers. This function spends money from your MTurk account and will fail if insufficient funds are available.}
 \usage{
 GrantBonus(workers, assignments, amounts, reasons, 
+           unique.request.token = NULL, 
            verbose = getOption('MTurkR.verbose', TRUE), ...)
 }
 \arguments{
@@ -13,6 +14,7 @@ GrantBonus(workers, assignments, amounts, reasons,
   \item{assignments}{A character string containing an AssignmentId for an assignment performed by that worker, or a vector of character strings containing the AssignmentId for an assignment performed by each of the workers specified in \code{workers}.}
   \item{amounts}{A character string containing an amount (in U.S. Dollars) to bonus the worker(s), or a vector (of length equal to the number of workers) of character strings containing the amount to be paid to each worker.}
   \item{reasons}{A character string containing a reason for bonusing the worker(s), or a vector (of length equal to the number of workers) of character strings containing the reason to bonus each worker. The reason is visible to each worker.}
+  \item{unique.request.token}{An optional character string, included only for advanced users. It can be used to prevent resending a bonus. A bonus will not be granted if a bonus was previously granted (within a short time window) using the same \code{unique.request.token}.}
   \item{verbose}{Optionally print the results of the API request to the standard output. Default is taken from \code{getOption('MTurkR.verbose', TRUE)}.}
   \item{...}{Additional arguments passed to \code{\link{request}}.}
 }
